--- a/trivias/templates/home.html
+++ b/trivias/templates/home.html
@@ -1,83 +1,13 @@
+{% load static %}
 <!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8">
     <title>Juego de preguntas</title>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.3.0/dist/sweetalert2.all.min.js"></script>
+    <link type="text/css" href="{% static 'css/style.css' %}"  rel="stylesheet" />
   </head>
   
   <body>
-    <style>
-      * {
-        transition: all 0.3s;
-      }
-  
-      body {
-        background: cadetblue;
-        padding: 0;
-        margin: 0;
-        text-align: center;
-        font-family: calibri;
-        font-size: 120%;
-      }
-  
-      .contenedor {
-        width: 98vw;
-        height: 97vh;
-        display: inline-flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-      }
-  
-      .encabezado {
-        position: relative;
-        background: white;
-        min-width: 300px;
-        width: 70%;
-        max-width: 600px;
-        padding: 10px;
-      }
-  
-      .categoria {
-        opacity: 0.3;
-        text-align: left;
-      }
-  
-      .pregunta {
-        padding: 10px;
-      }
-  
-      .imagen {
-        object-fit: cover;
-        height: 200px;
-        width: 95%;
-      }
-  
-      .btn {
-        background: white;
-        width: 60%;
-        max-width: 550px;
-        padding: 10px;
-        margin: 5px;
-        margin-bottom: 5px;
-        cursor: pointer;
-      }
-  
-      .btn:hover {
-        transform: scale(1.05);
-      }
-      
-      .numero{
-        position: absolute;
-        opacity:0.3;
-        top: 10px;
-        right: 10px;
-      }
-      
-      .puntaje{
-        padding:10px;
-        color:white;
-      }
-    </style>
+
     
     <div class="contenedor">
       <div class="puntaje" id="puntaje"></div>
@@ -112,9 +42,11 @@
   </body>
 
   <script>
+
     function oprimir_btn(valor) {
       if(valor=="True"){
         alert("correcto");
+        location.href= "http://127.0.0.1:8000/trivias/preguntas/?qstn={{contexto.Npreg}}";
       }else{
         alert("incorrecto");
       }
